--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1073,6 +1073,10 @@ section {
   text-align: center;
 }
 
+.portfolio-container {
+  height: max-content !important;
+}
+
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
@@ -1165,6 +1169,10 @@ section {
 .portfolio .portfolio-item:hover .portfolio-info {
   opacity: 1;
   bottom: 20px;
+}
+
+.loader {
+  width: 200px;
 }
 
 /*--------------------------------------------------------------
